@startuml Wordle
class Word{
    Letter[5] letters
}

class Letter{
    string symbol
}

class Game{
    Word WordToGuess
    Letter[26] lettersList
}

enum GameState{
    InProgress
    Won
    Lost
}

enum LetterState{
    Unknown
    Valid
    Invalid
    Wrongplace
}

Word "1" o-- "5" Letter
Game -> GameState
Letter -> LetterState
Game "1" o-- "1" Word

@enduml